# logUp_GKR

./: .gitmodules  notes.txt  sumcheck.txt
logup_gkr/: Cargo.toml
logup_gkr/src/: main.rs
rational_sumcheck/: Cargo.toml
rational_sumcheck/src/: main.rs
sumcheck/: Cargo.toml
sumcheck/src/: main.rs
