[package]
name = "logup-gkr"
version = "1.0.0"
authors = ["Ari Fiorino"]
edition = "2023"

[dependencies]
gkr-protocol = { path = "../thaler-study/gkr-protocol" }
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-test-curves = { version = "0.4.2", default-features = false, features = ["bls12_381_scalar_field", "bls12_381_curve"] }

