[package]
name = "rational-sumcheck"
version = "0.1.0"
authors = ["Ari"]
edition = "2021"

[dependencies]
gkr-protocol = { path = "../thaler-study/gkr-protocol" }
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-test-curves = { version = "0.4.2", default-features = false, features = ["bls12_381_scalar_field", "bls12_381_curve"] }

